# particle-simulation

./: CMakeLists.txt
include/: particle.h
src/: main.cpp  particle.cpp
